fixes about spacing

--- a/src/Components/description/ProjectDescription.scss
+++ b/src/Components/description/ProjectDescription.scss
@@ -35,20 +35,20 @@
     }
 
     .title {
-        font-size: 2.25rem;
-        margin-bottom: 0.3125rem;
+        font-size: 36px;
+        margin-bottom: 18px;
         // color: #fdb715;
         color: $primaryColor;
     }
 
     .description_subheading {
-        font-size: 0.875rem;
-        margin-bottom: 1.125rem;
+        font-size: 14px;
+        margin-bottom: 18px;
         color: $white;
         text-align: left;
         @include breakpoint-up(medium) {
-            font-size: 0.875rem;
-            margin-bottom: 1.125rem;
+            font-size: 14px;
+            margin-bottom: 18px;
             text-align: center;
         }
     }
@@ -56,24 +56,24 @@
     .body-text {
         // font-family: Arial, Narrow;
         font-size: 1rem;
-        line-height: 1.675rem;
+        line-height: 20px;
         // white-space: pre;
         text-align: left;
         @include breakpoint-up(medium) {
-            line-height: 1.875rem;
+            line-height: 30px;
         }
         // margin-bottom: 1.875rem;
         color: $white;
     }
 
     .credit-text {
-        font-size: 1rem;
-        line-height: 1.275rem;
+        font-size: 16px;
+        line-height: 20px;
         text-align: left;
         @include breakpoint-up(medium) {
-            font-size: 1rem;
-            line-height: 1.875rem;
-            text-align: center;
+            // font-size: 16px;
+            line-height: 30px;
+            // text-align: center;
         }
         color: $white;
     }
